Added mapping logic based on suffix tree sequence extraction